# Testing-Github-Action-2

.github/workflows/: deploy.yml  deploy2.yml
github-action-01/: pyproject.toml
github-action-01/.github/workflows/: deploy.yml
github-action-01/todo/: main.py
github-action-02/: Dockerfile
github-action-02/.github/workflows/: deploy.yml
github-action-02/todo/: main.py
